--- a/index.html
+++ b/index.html
@@ -115,6 +115,13 @@
                             「押されていない時風の画像を付加する」は、透明度が設定されている画像のみ正常に動作します。
                         </p>
                     </div>
+                    <div class="col_12">
+                        <input type="checkbox" id="disenableSmooth" />
+                        <label for="disenableSmooth">画像拡大時に補間しない</label>
+                        <p>
+                            ドット絵などを使う場合などにオススメです。<span class="warning">(一部ブラウザは対応していない可能性があります。PC版FireFox, Chromeでは利用可能です)</span>
+                        </p>
+                    </div>
                 </div>
             </div>
 
@@ -168,13 +175,6 @@
                     <input id="quantizeQuality" value="10">
                     <p>
                         jsgif内で使用されているNeuQuantに与えるquality値。小さい程クオンタイズ品質が高くなります(元の画像との誤差平均が小さくなる)が、ものすごく計算に時間が掛かります。
-                    </p>
-                </div>
-                <div class="col_6">
-                    <input type="checkbox" id="disenableSmooth" />
-                    <label for="disenableSmooth">画像拡大時に補間しない</label>
-                    <p>
-                        生成されるGIFのサイズが入力された画像サイズよりも大きい時に行われる入力画像の拡大出力において補間を行わないようにします( = 最近傍法で拡大します)。ドット絵などを使う場合などにオススメです。(一部ブラウザは対応していない可能性があります。PC版FireFox, Chromeでは利用可能です)
                     </p>
                 </div>
             </div>
