* update index.html (add file extention to attribute of input form)

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="grid">
             <div class="col_12 center">
                 <div class="file-drop-area block-center">
-                    <input id="localImgFile" type="file" class="file-drop-area" onchange="loadImg();" accept='image/jpeg,image/gif,image/png'/>
+                    <input id="localImgFile" type="file" class="file-drop-area" onchange="loadImg();" accept='.jpg,.gif,.png,image/jpeg,image/gif,image/png'/>
                     <div class="block-center">
                         <div class="custom-design">
                             ここに使いたい画像ファイルをドラッグ＆ドロップ！
