* add tips of generating size * add .tips style

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
                         <input id="generateSize" value="200">
                         <span style="width: 20px;"></span>
                         <button class="orange" onclick="confirmImageSize();">出力サイズを確認する</button>
+                        <p class="tips">
+                            Twitterへの投稿時は500px以上がオススメです。
+                        </p>
                         <p class="warning">
                             GIFアニメを生成していた場合、「出力サイズを確認する」を実行すると破棄されてしまいますのでご注意下さい。
                         </p>
