* update index.html (add link to lleag10th.html) * create lleag10th.html (10th anniversary version generator UI) * update css

--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
         </div>
 
         <div class="grid">
+            <div class="col_3 show-desktop hide-tablet hide-phone">
+            </div>
+            <div class="col_3 center mode-select">
+                <img src="res/Mode-selecting.svg" /><br/>通常仕様
+            </div>
+            <div class="col_3 center mode-select">
+                <a href="lleag10th.html"><img src="res/Mode-other.svg" /><br />10周年記念仕様</a>
+            </div>
+            <div class="col_3 show-desktop hide-tablet hide-phone">
+            </div>
             <div class="col_12 center">
                 <div class="file-drop-area block-center">
                     <input id="localImgFile" type="file" class="file-drop-area" onchange="loadImg();" accept='.jpg,.gif,.png,image/jpeg,image/gif,image/png'/>
@@ -81,7 +91,9 @@
 
             </div>
 
-            <h4>もっと細かくいじる</h4>
+            <div class="col_12">
+                <h4>もっと細かくいじる</h4>
+            </div>
             <ul class="tabs left">
                 <li><a href="#pref1">出現画像</a></li>
                 <li><a href="#pref2">弾ける大きな丸のエフェクト</a></li>
