--- a/lleag10th.html
+++ b/lleag10th.html
@@ -50,6 +50,16 @@
         </div>
 
         <div class="grid">
+            <div class="col_3 show-desktop hide-tablet hide-phone">
+            </div>
+            <div class="col_3 center mode-select">
+                <a href="index.html"><img src="res/Mode-other.svg" /><br/>通常仕様</a>
+            </div>
+            <div class="col_3 center mode-select">
+                <img src="res/Mode-selecting.svg" /><br />10周年記念仕様
+            </div>
+            <div class="col_3 show-desktop hide-tablet hide-phone">
+            </div>
             <div class="col_12 center">
                 <div class="file-drop-area block-center">
                     <input id="localImgFile" type="file" class="file-drop-area" onchange="loadImg();" accept='.jpg,.gif,.png,image/jpeg,image/gif,image/png'/>
@@ -81,7 +91,9 @@
 
             </div>
 
-            <h4>もっと細かくいじる</h4>
+            <div class="col_12">
+                <h4>もっと細かくいじる</h4>
+            </div>
             <ul class="tabs left">
                 <li><a href="#pref1">基本設定</a></li>
             </ul>
@@ -115,11 +127,32 @@
                             「押されていない時風の画像を付加する」は、透明度が設定されている画像のみ正常に動作します。
                         </p>
                     </div>
-                    <div class="col_12">
+                    <div class="col_6">
+                        <input type="checkbox" id="frameRateDouble" />
+                        <label for="frameRateDouble" class="inline">フレームレートを倍にする</label>
+                        <p>
+                            生成にマシンパワーと時間が掛かりますが、動きが滑らかになります。(スマートフォンでは厳しいかも知れません)
+                        </p>
+                    </div>
+                    <div class="col_6">
+                        <label for="iconScaleRate" class="inline">出現画像の拡大率</label>
+                        <input id="iconScaleRate" value="60">
+                        <p>
+                            出現画像の拡大率を調整できます。大きくすると出現画像が大きく出力されるようになりますが、画像によってははみ出たりします。透過付きの画像を使う時の簡易調整などにオススメです。
+                        </p>
+                    </div>
+                    <div class="col_6">
                         <input type="checkbox" id="disenableSmooth" />
                         <label for="disenableSmooth">画像拡大時に補間しない</label>
                         <p>
                             ドット絵などを使う場合などにオススメです。<span class="warning">(一部ブラウザは対応していない可能性があります。PC版FireFox, Chromeでは利用可能です)</span>
+                        </p>
+                    </div>
+                    <div class="col_6">
+                        <input type="checkbox" id="illustPriorQuantize" />
+                        <label for="illustPriorQuantize" class="inline">入力画像優先でクオンタイズを行う</label>
+                        <p>
+                            エフェクトよりも入力画像の色に合わせるように減色を行うようにします。出現画像の色が良くなる…かも知れません。
                         </p>
                     </div>
                 </div>
