--- a/lleag10th.html
+++ b/lleag10th.html
@@ -135,7 +135,7 @@
                         </p>
                     </div>
                     <div class="col_6">
-                        <label for="iconScaleRate" class="inline">出現画像の拡大率</label>
+                        <label for="iconScaleRate" class="inline">出現画像の拡大率(%)</label>
                         <input id="iconScaleRate" value="60">
                         <p>
                             出現画像の拡大率を調整できます。大きくすると出現画像が大きく出力されるようになりますが、画像によってははみ出たりします。透過付きの画像を使う時の簡易調整などにオススメです。
