add link to license for generated images

--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
             <small>
             presented by WhiteLuckers (Amigo <a href="https://twitter.com/WL_Amigo">@WL_Amigo</a>)
             <br/> Like Effect Generator is licensed under the MIT License.
+            <br/> <a href="https://github.com/WL-Amigo/LikeLikeEffectGenerator/blob/master/LicenseForGeneratedImages.md">本ツールを使って作成した画像・素材の利用について</a>
             </small>
         </div>
 
