fix canvg path to use local library

--- a/index.html
+++ b/index.html
@@ -229,9 +229,9 @@
         </div>
 
         <!-- canvg SVG to Canvas Renderer -->
-        <script type="text/javascript" src="http://gabelerner.github.io/canvg/rgbcolor.js"></script>
-        <script type="text/javascript" src="http://gabelerner.github.io/canvg/StackBlur.js"></script>
-        <script type="text/javascript" src="http://gabelerner.github.io/canvg/canvg.js"></script>
+        <script type="text/javascript" src="lib/canvg/rgbcolor.js"></script>
+        <script type="text/javascript" src="lib/canvg/StackBlur.js"></script>
+        <script type="text/javascript" src="lib/canvg/canvg.min.js"></script>
         <!-- jsgif GIF Encoder on Javascript -->
         <script type="text/javascript" src="lib/jsgif/LZWEncoder.js"></script>
         <script type="text/javascript" src="lib/jsgif/NeuQuant.js"></script>
