--- a/lleag10th.html
+++ b/lleag10th.html
@@ -196,9 +196,9 @@
         <!-- SVG.JS -->
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.3.0/svg.min.js"></script>
         <!-- canvg SVG to Canvas Renderer -->
-        <script type="text/javascript" src="http://gabelerner.github.io/canvg/rgbcolor.js"></script>
-        <script type="text/javascript" src="http://gabelerner.github.io/canvg/StackBlur.js"></script>
-        <script type="text/javascript" src="http://gabelerner.github.io/canvg/canvg.js"></script>
+        <script type="text/javascript" src="lib/canvg/rgbcolor.js"></script>
+        <script type="text/javascript" src="lib/canvg/StackBlur.js"></script>
+        <script type="text/javascript" src="lib/canvg/canvg.min.js"></script>
         <!-- jsgif GIF Encoder on Javascript -->
         <script type="text/javascript" src="lib/jsgif/LZWEncoder.js"></script>
         <script type="text/javascript" src="lib/jsgif/NeuQuant.js"></script>
